Wed Feb 26 21:31:00 2017 +0000
	Fixed problem with segfault when copying http_response object

Wed Feb 12 13:14:01 2017 +0000
	Updated to libmicrohttpd 0.9.52

Wed Jul 13 02:23:11 2016 +0100
	Fixed problems with large payloads
	Fixed memory leak in http_response_ptr

Tue Dec 29 18:56:31 2015 +0100
	Removed support for event supplier (badly defined, complicated and almost useless)
	Eliminated custom selection logic (simplified overall code in webserver.cpp)
	Changed comet to use a lock-free implementation

Sun Dec 27 19:39:01 2015 +0100
	Removed POLL start configuration (THREAD now defaults to POLL or EPOLL on Linux)
	Use TCP_FASTOPEN on linux >= 3.6

Sat Dec 26 15:08:22 2015 +0100
	Changed http_resource to use classic C++ polymorphism using virtual instead of CRTP

Fri Jul 17 21:38:54 2015 +0000
	Removed build dependency on pkg-config

Wed Apr 15 01:40:11 2015 +0000
	Support build on MacOsX
	Improved support for CI on travis
	Solved bug on event_supplier registering
	Solved bug on standardize_url to avoid removing root
	Change cycle_callback_ptr so that buffer can be modified
	Moved to version 0.9.0

Sun Jul 23 02:46:20 2014 +0100
	Support for building on MinGW/Cygwin systems
	min libmicrohttpd version moved to 0.9.37
	Moved to version 0.8.0

Sat Mar 23 15:22:40 2014 +0100
	Continue the cleanup reducing webserver.cpp responsibilities
	Deep work on documentation
	Moved to version 0.7.2

Sat Jan 25 16:31:03 2014 +0100
	Cleaned-up webserver.cpp code to extract secondary classes
	Enforced immutability of webserver class
	Enabled library to compile on g++ 4.1.2

Wed Oct 31 17:59:40 2012 +0100
	Added parameter in http_response to specify if it needs to be deleted by
	WS - Sebastiano Merlino

Wed Oct 31 14:23:57 2012 +0100
	Changed dependency download method - Sebastiano Merlino

Wed Oct 31 14:13:49 2012 +0100
	Added dependency to travis - Sebastiano Merlino

Wed Oct 31 14:07:30 2012 +0100
	Changed travis build path - Sebastiano Merlino

Wed Oct 31 14:02:59 2012 +0100