@@ -24,7 +24,7 @@
 #define _HTTPSERVER_HPP_INSIDE_
 
 #include "httpserver/http_utils.hpp"
-#include "httpserver/details/http_endpoint.hpp"
+#include "httpserver/http_endpoint.hpp"
 #include "httpserver/http_resource.hpp"
 #include "httpserver/http_response.hpp"
 #include "httpserver/http_response_builder.hpp"
