@@ -48,7 +48,7 @@
 #include "http_response.hpp"
 #include "http_request.hpp"
 #include "http_response_builder.hpp"
-#include "details/http_endpoint.hpp"
+#include "http_endpoint.hpp"
 #include "string_utilities.hpp"
 #include "create_webserver.hpp"
 #include "details/comet_manager.hpp"
@@ -224,10 +224,10 @@ void webserver::request_completed (
 
 bool webserver::register_resource(const std::string& resource, http_resource* hrm, bool family)
 {
-    details::http_endpoint idx(resource, family, true, regex_checking);
+    http_endpoint idx(resource, family, true, regex_checking);
 
-    pair<map<details::http_endpoint, http_resource*>::iterator, bool> result = registered_resources.insert(
-        map<details::http_endpoint, http_resource*>::value_type(idx, hrm)
+    pair<map<http_endpoint, http_resource*>::iterator, bool> result = registered_resources.insert(
+        map<http_endpoint, http_resource*>::value_type(idx, hrm)
     );
 
     if(result.second)
@@ -435,7 +435,7 @@ bool webserver::stop()
 
 void webserver::unregister_resource(const string& resource)
 {
-    details::http_endpoint he(resource);
+    http_endpoint he(resource);
     this->registered_resources.erase(he);
     this->registered_resources.erase(he.url_complete);
 }
@@ -813,11 +813,11 @@ int webserver::finalize_answer(
             if(regex_checking)
             {
 
-                map<details::http_endpoint, http_resource*>::iterator found_endpoint;
+                map<http_endpoint, http_resource*>::iterator found_endpoint;
 
-                details::http_endpoint endpoint(st_url, false, false, regex_checking);
+                http_endpoint endpoint(st_url, false, false, regex_checking);
 
-                map<details::http_endpoint, http_resource*>::iterator it;
+                map<http_endpoint, http_resource*>::iterator it;
 
                 size_t len = 0;
                 size_t tot_len = 0;
